Did some changes to remove the warnings