@@ -1,6 +1,6 @@
 package sovok.mcbuildlibrary.dao.impl;
 
-import java.util.Arrays;
+import java.util.ArrayList;
 import java.util.List;
 import java.util.Optional;
 import java.util.stream.Collectors;
@@ -12,58 +12,58 @@ import sovok.mcbuildlibrary.model.Build;
 public class BuildDaoImpl implements BuildDao {
 
     // Simulated database of builds using an in-memory List.
-    private final List<Build> builds = Arrays.asList(
+    private final List<Build> builds = new ArrayList<>(List.of(
             new Build("1", "Medieval Castle", "Author1", "Medieval",
                     "A majestic medieval castle with intricate details.",
-                    Arrays.asList("Gray", "Blue"),
-                    Arrays.asList("https://example.com/medieval1.jpg", "https://example.com/medieval2.jpg"),
+                    new ArrayList<>(List.of("Gray", "Blue")),
+                    new ArrayList<>(List.of("https://example.com/medieval1.jpg", "https://example.com/medieval2.jpg")),
                     "https://example.com/medieval.schem"),
             new Build("2", "Modern Villa", "Author1", "Fantasy",
                     "A sleek modern villa with a swimming pool.",
-                    Arrays.asList("White", "Black", "Gray"),
-                    Arrays.asList("https://example.com/modern1.jpg", "https://example.com/modern2.jpg"),
+                    new ArrayList<>(List.of("White", "Black", "Gray")),
+                    new ArrayList<>(List.of("https://example.com/modern1.jpg", "https://example.com/modern2.jpg")),
                     "https://example.com/modern.schem"),
             new Build("3", "Fantasy Treehouse", "Author2", "Fantasy",
                     "An enchanting treehouse in a fantasy setting.",
-                    Arrays.asList("Green", "Brown"),
-                    Arrays.asList("https://example.com/fantasy1.jpg"),
+                    new ArrayList<>(List.of("Green", "Brown")),
+                    new ArrayList<>(List.of("https://example.com/fantasy1.jpg")),
                     "https://example.com/fantasy.schem"),
             new Build("4", "Medieval Bridge", "Author1", "Medieval",
                     "An impressive medieval bridge perfect for river crossings.",
-                    Arrays.asList("Gray", "Dark Gray"),
-                    Arrays.asList("https://example.com/medieval_bridge1.jpg"),
+                    new ArrayList<>(List.of("Gray", "Dark Gray")),
+                    new ArrayList<>(List.of("https://example.com/medieval_bridge1.jpg")),
                     "https://example.com/medieval_bridge.schem"),
             new Build("5", "Enchanted Tower", "Author2", "Fantasy",
                     "A mystical tower with glowing runes and mysterious vibes.",
-                    Arrays.asList("Purple", "Blue"),
-                    Arrays.asList("https://example.com/enchanted_tower1.jpg", "https://example.com/enchanted_tower2.jpg"),
+                    new ArrayList<>(List.of("Purple", "Blue")),
+                    new ArrayList<>(List.of("https://example.com/enchanted_tower1.jpg", "https://example.com/enchanted_tower2.jpg")),
                     "https://example.com/enchanted_tower.schem"),
             new Build("6", "Modern Skyscraper", "Author3", "Modern",
                     "A towering skyscraper with a rooftop garden.",
-                    Arrays.asList("Silver", "White"),
-                    Arrays.asList("https://example.com/modern_skyscraper1.jpg", "https://example.com/modern_skyscraper2.jpg"),
+                    new ArrayList<>(List.of("Silver", "White")),
+                    new ArrayList<>(List.of("https://example.com/modern_skyscraper1.jpg", "https://example.com/modern_skyscraper2.jpg")),
                     "https://example.com/modern_skyscraper.schem"),
             new Build("7", "Rustic Cabin", "Author3", "Rustic",
                     "A cozy cabin nestled in the woods.",
-                    Arrays.asList("Brown", "Green"),
-                    Arrays.asList("https://example.com/rustic_cabin1.jpg"),
+                    new ArrayList<>(List.of("Brown", "Green")),
+                    new ArrayList<>(List.of("https://example.com/rustic_cabin1.jpg")),
                     "https://example.com/rustic_cabin.schem"),
             new Build("8", "Medieval Watchtower", "Author1", "Medieval",
                     "A sturdy medieval watchtower overlooking the land.",
-                    Arrays.asList("Gray", "Red"),
-                    Arrays.asList("https://example.com/watchtower1.jpg", "https://example.com/watchtower2.jpg"),
+                    new ArrayList<>(List.of("Gray", "Red")),
+                    new ArrayList<>(List.of("https://example.com/watchtower1.jpg", "https://example.com/watchtower2.jpg")),
                     "https://example.com/watchtower.schem"),
             new Build("9", "Fantasy Floating Island", "Author2", "Fantasy",
                     "A magical floating island with waterfalls and lush greenery.",
-                    Arrays.asList("Blue", "Green"),
-                    Arrays.asList("https://example.com/floating_island1.jpg", "https://example.com/floating_island2.jpg"),
+                    new ArrayList<>(List.of("Blue", "Green")),
+                    new ArrayList<>(List.of("https://example.com/floating_island1.jpg", "https://example.com/floating_island2.jpg")),
                     "https://example.com/floating_island.schem"),
             new Build("10", "Modern Beach House", "Author3", "Modern",
                     "A stylish beach house with panoramic ocean views.",
-                    Arrays.asList("White", "Turquoise"),
-                    Arrays.asList("https://example.com/beach_house1.jpg"),
+                    new ArrayList<>(List.of("White", "Turquoise")),
+                    new ArrayList<>(List.of("https://example.com/beach_house1.jpg")),
                     "https://example.com/beach_house.schem")
-    );
+    ));
 
     @Override
     public Optional<Build> findById(String id) {
@@ -111,7 +111,7 @@ public class BuildDaoImpl implements BuildDao {
                     return build.getColors()
                             .stream()
                             .anyMatch(buildColor ->
-                                    colors.stream().anyMatch(queryColor -> buildColor.equalsIgnoreCase(queryColor))
+                                    colors.stream().anyMatch(buildColor::equalsIgnoreCase)
                             );
                 })
                 .collect(Collectors.toList());
